--- a/index.html
+++ b/index.html
@@ -72,15 +72,7 @@
             <img src="./img/icons/phone.svg" alt="" />
           </a>
         </div>
-        <div
-          class="flex items-center relative px-4 w-[244px]"
-          style="
-            border: 1px solid transparent;
-            border-radius: 2em;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-        >
+        <div class="flex items-center relative px-4 w-[244px] input_linear">
           <img src="./img/icons/search.svg" alt="" class="w-4 h-4" />
           <input
             type="text"
@@ -133,16 +125,7 @@
             class="pl-[0px]"
           />
           <p
-            style="
-              background: linear-gradient(
-                85.64deg,
-                #a155d3 6.2%,
-                #277fe9 101.54%
-              );
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;
-            "
-            class="text-[13px] leading-none pt-[10px] text-transparent bg-clip-text"
+            class="text_linear text-[13px] leading-none pt-[10px] text-transparent bg-clip-text"
           >
             Главная
           </p>
@@ -201,11 +184,13 @@
                     <li class="text-[20px] pb-[6px]">Камеры 23 МП и 8 МП</li>
                     <li class="text-[20px] pb-9">32 ГБ встроенной памяти</li>
                   </ul>
-                  <button
-                    class="w-[132px] h-[50px] border-[1px] border-black rounded-3xl text-lg custom-animation"
-                  >
-                    Купить
-                  </button>
+                  <a href="./pages/catalog.html">
+                    <button
+                      class="w-[132px] h-[50px] border-[1px] border-black rounded-3xl text-lg cursor-pointer"
+                    >
+                      Купить
+                    </button>
+                  </a>
                 </div>
                 <div class="relative">
                   <img
@@ -654,25 +639,9 @@
                 Смартфон Apple iPhone 13 выполнен в ... (ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text_linear text-transparent bg-clip-text">
                   Читать полностью
                 </span>
               </button>
@@ -729,32 +698,18 @@
                 <div class="pt-4 w-full">
                   <div class="pb-4">
                     <input
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                       type="text"
                       id="name"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
                       placeholder="Имя"
                     />
                   </div>
 
                   <div class="pb-[15px]">
                     <input
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                       type="tel"
                       id="phone"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
                       placeholder="Телефон"
                     />
                   </div>
@@ -763,14 +718,7 @@
                     <input
                       type="email"
                       id="email"
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
-                      class="w-[650px] max-md:w-full h-[60px] pl-7"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
                       placeholder="Email"
                     />
                   </div>
@@ -778,16 +726,9 @@
                   <div class="pb-4">
                     <textarea
                       id="comments"
-                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300 input_linear"
                       rows="4"
                       placeholder="Комментарии"
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                     ></textarea>
                   </div>
                 </div>
@@ -795,12 +736,7 @@
             </div>
           </div>
           <div
-            style="
-              border: 1px solid transparent;
-              background: linear-gradient(#fff, #fff 0) padding-box,
-                linear-gradient(to right, #a155d3, #277fe9) border-box;
-            "
-            class="w-[605px] h-[686px] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden"
+            class="w-[605px] h-[686px] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden input_linear"
           >
             <div style="position: relative; overflow: hidden">
               <a
