--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,15 +72,7 @@
             <img src="../img/icons/phone.svg" alt="" />
           </a>
         </div>
-        <div
-          class="flex items-center relative px-4 w-[244px]"
-          style="
-            border: 1px solid transparent;
-            border-radius: 2em;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-        >
+        <div class="flex items-center relative px-4 w-[244px] input_linear">
           <img src="../img/icons/search.svg" alt="" class="w-4 h-4" />
           <input
             type="text"
@@ -219,32 +211,18 @@
                 <div class="pt-4 w-full">
                   <div class="pb-4">
                     <input
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                       type="text"
                       id="name"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
                       placeholder="Имя"
                     />
                   </div>
 
                   <div class="pb-[15px]">
                     <input
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                       type="tel"
                       id="phone"
-                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
                       placeholder="Телефон"
                     />
                   </div>
@@ -253,14 +231,7 @@
                     <input
                       type="email"
                       id="email"
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
-                      class="w-[650px] max-md:w-full h-[60px] pl-7"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
                       placeholder="Email"
                     />
                   </div>
@@ -268,16 +239,9 @@
                   <div class="pb-4">
                     <textarea
                       id="comments"
-                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300"
+                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300 input_linear"
                       rows="4"
                       placeholder="Комментарии"
-                      style="
-                        border: 1px solid transparent;
-                        border-radius: 2em;
-                        background: linear-gradient(#f8f9fa, #f8f9fa 0)
-                            padding-box,
-                          linear-gradient(to right, #a155d3, #277fe9) border-box;
-                      "
                     ></textarea>
                   </div>
                 </div>
@@ -285,12 +249,7 @@
             </div>
           </div>
           <div
-            style="
-              border: 1px solid transparent;
-              background: linear-gradient(#fff, #fff 0) padding-box,
-                linear-gradient(to right, #a155d3, #277fe9) border-box;
-            "
-            class="w-[605px] h-[686px] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden"
+            class="w-[605px] h-[686px] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden input_linear"
           >
             <div style="position: relative; overflow: hidden">
               <a
