--- a/pages/forma.html
+++ b/pages/forma.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moskow Sales Center | Saved</title>
+    <title>Moskow Sales Center | Form</title>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link href="../index.css" rel="stylesheet" />
@@ -139,15 +139,11 @@
           class="flex flex-col items-center justify-center"
         >
           <img
-            src="../img/icons/mobilemenuicons/mobilelikeact.svg"
+            src="../img/icons/mobilemenuicons/mobilelike.svg"
             alt="Compare"
             class="pl-[0px]"
           />
-          <p
-            class="text_linear text-[13px] leading-none pt-[10px] text-transparent bg-clip-text"
-          >
-            Избранное
-          </p>
+          <p class="text-[13px] leading-none pt-[10px]">Избранное</p>
         </a>
         <a href="#" class="flex flex-col items-center justify-center">
           <img
@@ -165,48 +161,124 @@
       class="max-w-[1294px] mx-auto px-4 pt-2 animate-fadeIn max-md:w-full"
     >
       <section class="w-full text-[#454545] mt-8 max-md:mt-1">
-        <a class="text-[#ababab]" href="../index.html">Главная</a> / Избранное
+        <a class="text-[#ababab]" href="../index.html">Главная</a> / Форма
+        гарантийного возврата
       </section>
       <section id="contacts" class="pb-16 pt-16 max-md:pt-6 max-md:pb-[150px]">
-        <h2
-          class="text-[24px] font-semibold pb-0 max-md:text-[20px] max-md:pb-4 text-left"
-        >
-          Избранное
-        </h2>
-        <div class="flex flex-col">
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
+        <div class="flex gap-10 pb-5 max-md:pb-6">
+          <div class="flex flex-col max-md:w-full">
+            <div class="flex justify-between w-full">
+              <div class="w-full">
+                <div class="pt-4 w-full">
+                  <div class="pb-4">
+                    <input
+                      type="text"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
+                      placeholder="Наименования покупателя (как в договоре)"
+                    />
+                  </div>
+
+                  <div class="pb-[15px]">
+                    <input
+                      type="text"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
+                      placeholder="Наименования товара (как в договоре УПД)"
+                    />
+                  </div>
+
+                  <div class="pb-[22px]">
+                    <input
+                      type="text"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
+                      placeholder="Серийный номер (s/n)"
+                    />
+                  </div>
+
+                  <div class="pb-4">
+                    <textarea
+                      id="comments"
+                      class="w-[650px] max-md:w-full h-[247px] pl-6 pt-6 rounded-full border border-gray-300 input_linear"
+                      rows="4"
+                      placeholder="Описание неисправности"
+                    ></textarea>
+                  </div>
+                  <div class="pb-[22px]">
+                    <input
+                      type="text"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
+                      placeholder="Адрес для забора оборудования"
+                    />
+                  </div>
+                  <h3 class="text-[14] pb-7 mt-10 max-md:pb-4 font-semibold">
+                    Контакты
+                  </h3>
+
+                  <div class="pb-4">
+                    <input
+                      type="text"
+                      id="name"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
+                      placeholder="ФИО"
+                    />
+                  </div>
+
+                  <div class="pb-[15px]">
+                    <input
+                      type="tel"
+                      id="phone"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 rounded-full border border-gray-300 input_linear"
+                      placeholder="Мобильный телефон"
+                    />
+                  </div>
+
+                  <div class="pb-[22px]">
+                    <input
+                      type="email"
+                      id="email"
+                      class="w-[650px] max-md:w-full h-[60px] pl-7 input_linear"
+                      placeholder="Email"
+                    />
+                  </div>
+                  <div
+                    class="w-[650px] max-md:w-full h-[60px] pl-7 pr-5 max-md:pr-2 input_linear flex items-center"
+                  >
+                    <label id="file-label" class="text-gray-500 flex-grow"
+                      >Сканированная копия подписанной УПД</label
+                    >
+                    <button
+                      onclick="document.getElementById('file-input').click()"
+                      class="font-bold flex items-center border py-2 rounded-full pl-8 pr-4 max-md:pl-4 max-md:pr-6 text-sm max-md:text-xs"
+                    >
+                      Прикрепить
+                      <img
+                        src="../img/icons/iconfileupload.svg"
+                        class="ml-2 w-6 h-6 max-md:w-4 max-md:h-4"
+                        alt=""
+                      />
+                    </button>
+                    <input
+                      type="file"
+                      id="file-input"
+                      onchange="updateFileName()"
+                      class="hidden"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
-            <button class="text-3xl">&times;</button>
           </div>
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
-            </div>
-            <button class="text-3xl">&times;</button>
+          <div
+            class="w-[605px] h-[full] rounded-[3.5em] mt-[16px] overflow-hidden max-md:hidden flex items-center justify-center"
+          >
+            <img src="../img/mailrobot.png" alt="" />
           </div>
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
-            </div>
-            <button class="text-3xl">&times;</button>
-          </div>
-          <div class="flex justify-end my-[60px]">
-            <button
-              class="w-[320px] h-[58px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto flex gap-4 justify-center items-center"
-            >
-              <img
-                src="../img/icons/savedinnerbtn.svg"
-                class="max-md:hidden h-6 w-6"
-                alt=""
-              />
-              Получить оптовый прайс
-            </button>
-          </div>
+        </div>
+        <div class="flex max-md:flex max-md:items-center max-md:justify-center">
+          <button
+            class="w-[190px] h-[50px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto md:mt-10"
+          >
+            Отправить
+          </button>
         </div>
       </section>
     </main>
