--- a/pages/manufacturers.html
+++ b/pages/manufacturers.html
@@ -72,15 +72,7 @@
             <img src="../img/icons/phone.svg" alt="" />
           </a>
         </div>
-        <div
-          class="flex items-center relative px-4 w-[244px]"
-          style="
-            border: 1px solid transparent;
-            border-radius: 2em;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-        >
+        <div class="flex items-center relative px-4 w-[244px] input_linear">
           <img src="../img/icons/search.svg" alt="" class="w-4 h-4" />
           <input
             type="text"
