--- a/pages/news.html
+++ b/pages/news.html
@@ -72,15 +72,7 @@
             <img src="../img/icons/phone.svg" alt="" />
           </a>
         </div>
-        <div
-          class="flex items-center relative px-4 w-[244px]"
-          style="
-            border: 1px solid transparent;
-            border-radius: 2em;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-        >
+        <div class="flex items-center relative px-4 w-[244px] input_linear">
           <img src="../img/icons/search.svg" alt="" class="w-4 h-4" />
           <input
             type="text"
@@ -198,25 +190,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -242,25 +218,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -286,25 +246,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -330,25 +274,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -374,25 +302,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -418,25 +330,9 @@
                 конструкцией(ОПИСАНИЕ)
               </p>
               <button
-                style="
-                  border: 1px solid transparent;
-                  background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-                    linear-gradient(to right, #a155d3, #277fe9) border-box;
-                "
-                class="border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
+                class="btn_linear border py-4 px-7 w-max text-[20px] max-md:text-[10px] rounded-full relative"
               >
-                <span
-                  style="
-                    background: linear-gradient(
-                      85.64deg,
-                      #a155d3 6.2%,
-                      #277fe9 101.54%
-                    );
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                  "
-                  class="text-transparent bg-clip-text"
-                >
+                <span class="text-transparent bg-clip-text text_linear">
                   Читать полностью
                 </span>
               </button>
@@ -444,25 +340,9 @@
           </div>
         </div>
         <button
-          style="
-            border: 1px solid transparent;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-          class="mx-auto border py-4 px-7 max-md:py-2 w-max text-[20px] max-md:text-[10px] rounded-full relative flex gap-2 items-center mt-6"
+          class="btn_linear mx-auto border py-4 px-7 max-md:py-2 w-max text-[20px] max-md:text-[10px] rounded-full relative flex gap-2 items-center mt-6"
         >
-          <span
-            style="
-              background: linear-gradient(
-                85.64deg,
-                #a155d3 6.2%,
-                #277fe9 101.54%
-              );
-              -webkit-background-clip: text;
-              -webkit-text-fill-color: transparent;
-            "
-            class="text-transparent bg-clip-text"
-          >
+          <span class="text_linear text-transparent bg-clip-text">
             Смотреть ещё
           </span>
           <img
