--- a/pages/compare.html
+++ b/pages/compare.html
@@ -72,15 +72,7 @@
             <img src="../img/icons/phone.svg" alt="" />
           </a>
         </div>
-        <div
-          class="flex items-center relative px-4 w-[244px]"
-          style="
-            border: 1px solid transparent;
-            border-radius: 2em;
-            background: linear-gradient(#f8f9fa, #f8f9fa 0) padding-box,
-              linear-gradient(to right, #a155d3, #277fe9) border-box;
-          "
-        >
+        <div class="flex items-center relative px-4 w-[244px] input_linear">
           <img src="../img/icons/search.svg" alt="" class="w-4 h-4" />
           <input
             type="text"
@@ -172,45 +164,206 @@
         <a class="text-[#ababab]" href="../index.html">Главная</a> / Сравнение
         товаров
       </section>
-      <section id="contacts" class="pb-16 pt-16 max-md:pt-6 max-md:pb-[150px]">
-        <h2
-          class="text-[24px] font-semibold pb-0 max-md:text-[20px] max-md:pb-4 text-left"
-        >
-          Сравнение товаров
-        </h2>
-        <div class="flex flex-col">
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
-            </div>
-            <button class="text-3xl">&times;</button>
+      <h3 class="text-[32px] py-7 max-md:text-[20px] max-md:pb-4 font-bold">
+        Сравнение товаров
+      </h3>
+      <section
+        id="contacts"
+        class="pb-16 max-md:pt-6 max-md:pb-[150px] overflow-x-auto"
+      >
+        <div class="flex md:grid md:grid-cols-3 min-w-max">
+          <div class="p-5 max-md:w-[300px] border border-[#F2F5F9] relative">
+            <img
+              src="../img/iphone14.png"
+              alt="Product 1"
+              class="mx-auto h-32"
+            />
+            <img
+              src="../img/icons/heart.svg"
+              alt=""
+              class="bottom-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <img
+              src="../img/icons/trash.svg"
+              alt=""
+              class="top-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <h3 class="text-sm text-[#7E8794] mt-5 mb-1">Смартфоны</h3>
+            <h2 class="font-medium mb-3 text-[#263141]">
+              Apple iPhone 13 Pro Max 256 ГБ серый
+            </h2>
+            <p class="text-[#7E8794]">Цена</p>
+            <p class="font-bold text-[#263141]">114 099 ₽</p>
           </div>
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
-            </div>
-            <button class="text-3xl">&times;</button>
+          <div class="p-5 max-md:w-[300px] border border-[#F2F5F9] relative">
+            <img
+              src="../img/iphone14.png"
+              alt="Product 1"
+              class="mx-auto h-32"
+            />
+            <img
+              src="../img/icons/heart.svg"
+              alt=""
+              class="bottom-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <img
+              src="../img/icons/trash.svg"
+              alt=""
+              class="top-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <h3 class="text-sm text-[#7E8794] mt-5 mb-1">Смартфоны</h3>
+            <h2 class="font-medium mb-3 text-[#263141]">
+              Apple iPhone 13 Pro Max 256 ГБ серый
+            </h2>
+            <p class="text-[#7E8794]">Цена</p>
+            <p class="font-bold text-[#263141]">114 099 ₽</p>
           </div>
-          <div class="border-b border-[#A3A3A3] flex justify-between py-8">
-            <div class="flex items-center gap-4 font-medium">
-              <img src="../img/computer.png" class="h-[90px]" alt="" />
-              <h3>Компьютер</h3>
-            </div>
-            <button class="text-3xl">&times;</button>
+          <div class="p-5 max-md:w-[300px] border border-[#F2F5F9] relative">
+            <img
+              src="../img/iphone14.png"
+              alt="Product 1"
+              class="mx-auto h-32"
+            />
+            <img
+              src="../img/icons/heart.svg"
+              alt=""
+              class="bottom-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <img
+              src="../img/icons/trash.svg"
+              alt=""
+              class="top-5 right-5 absolute p-3 p-3 border border-[#F2F5F9] rounded-full cursor-pointer"
+            />
+            <h3 class="text-sm text-[#7E8794] mt-5 mb-1">Смартфоны</h3>
+            <h2 class="font-medium mb-3 text-[#263141]">
+              Apple iPhone 13 Pro Max 256 ГБ серый
+            </h2>
+            <p class="text-[#7E8794]">Цена</p>
+            <p class="font-bold text-[#263141]">114 099 ₽</p>
           </div>
-          <div class="flex justify-end my-[60px]">
-            <button
-              class="w-[320px] h-[58px] pb-[2px] text-lg bg-gradient-to-r to-blue-500 from-purple-500 rounded-full text-white custom-animation max-md:mx-auto flex gap-4 justify-center items-center"
+        </div>
+        <div class="border border-[#F2F5F9] pt-5 px-0 min-w-max">
+          <h2 class="text-xl font-black mb-6 px-5">Сравнение товаров</h2>
+          <div class="flex md:grid md:grid-cols-3 gap-4 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">Рейтинг</h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div
+              class="h-[60px] flex items-center px-5 max-md:w-[300px] flex items-center gap-1"
             >
-              <img
-                src="../img/icons/savedinnerbtn.svg"
-                class="max-md:hidden h-6 w-6"
-                alt=""
-              />
-              Получить оптовый прайс
-            </button>
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/star.svg" alt="" />
+              <p class="text-[#7E8794] ml-2 text-sm">440</p>
+            </div>
+            <div
+              class="h-[60px] flex items-center px-5 max-md:w-[300px] flex items-center gap-1"
+            >
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/star.svg" alt="" />
+              <p class="text-[#7E8794] ml-2 text-sm">440</p>
+            </div>
+            <div
+              class="h-[60px] flex items-center px-5 max-md:w-[300px] flex items-center gap-1"
+            >
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/starfluid.svg" alt="" />
+              <img src="../img/icons/star.svg" alt="" />
+              <p class="text-[#7E8794] ml-2 text-sm">440</p>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">Модель</h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">Apple iPhone 13</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">Apple iPhone 13</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">Apple iPhone 13</p>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">Количество ядер</h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">12</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">8</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">6</p>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">Год релиза</h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">2021</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">2021</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">2021</p>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">
+                Поддержка сетей 4G (LTE)
+              </h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <img src="../img/icons/Check.svg" alt="" />
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <img src="../img/icons/Check.svg" alt="" />
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <img src="../img/icons/close.svg" alt="" />
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 bg-[#F6F7FA]">
+            <div class="py-3 px-5">
+              <h4 class="text-lg font-bold text-[#263141]">
+                Объем встроенной памяти
+              </h4>
+            </div>
+          </div>
+          <div class="flex md:grid md:grid-cols-3 gap-x-4">
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">128 ГБ</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">128 ГБ</p>
+            </div>
+            <div class="h-[60px] flex items-center px-5 max-md:w-[300px]">
+              <p class="text-[#7E8794]">128 ГБ</p>
+            </div>
           </div>
         </div>
       </section>
