--- a/index.html
+++ b/index.html
@@ -40,20 +40,24 @@
 
           <div
             id="catalogModal"
-            class="absolute left-0 mt-2 w-48 bg-white shadow-lg rounded-lg overflow-hidden opacity-0 scale-95 transition-all duration-300 z-10"
+            class="absolute left-0 mt-2 w-max bg-white shadow-lg rounded-lg overflow-hidden opacity-0 scale-95 transition-all duration-300 z-10"
           >
             <ul class="py-2">
-              <li class="px-4 py-2 hover:bg-gray-100 font-semibold text-xl">
-                Brand
+              <li class="px-2 py-2 font-bold text-xl">Ноутбуки</li>
+              <li
+                class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
+              >
+                <a href="./catalog.html"> Ноутбуки Rikor  </a>
               </li>
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="./pages/catalog.html"> Samsung </a>
+              <li
+                class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
+              >
+                <a href="./catalog.html"> Ноутбуки Гравитон Ноутбуки Irbis  </a>
               </li>
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="./pages/catalog.html"> iPhone </a>
-              </li>
-              <li class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
-                <a href="./pages/catalog.html"> Remdi </a>
+              <li
+                class="px-4 py-2 hover:bg-gray-100 cursor-pointer text-[rgba(0,0,0,0.5)]"
+              >
+                <a href="./catalog.html"> Ноутбуки iRU Ноутбуки F-Plus  </a>
               </li>
             </ul>
           </div>
@@ -130,7 +134,10 @@
             Главная
           </p>
         </a>
-        <a href="./" class="flex flex-col items-center justify-center">
+        <a
+          href="./pages/catalogMobile.html"
+          class="flex flex-col items-center justify-center"
+        >
           <img
             src="./img/icons/mobilemenuicons/catalog.svg"
             alt="Compare"
@@ -149,7 +156,10 @@
           />
           <p class="text-[13px] leading-none pt-[10px]">Избранное</p>
         </a>
-        <a href="#" class="flex flex-col items-center justify-center">
+        <a
+          href="tel:+84951504072"
+          class="flex flex-col items-center justify-center"
+        >
           <img
             src="./img/icons/mobilemenuicons/mobilephone.svg"
             alt="Compare"
