--- a/pages/contact.html
+++ b/pages/contact.html
@@ -126,7 +126,10 @@
           />
           <p class="text-[13px] leading-none pt-[10px]">Главная</p>
         </a>
-        <a href="../" class="flex flex-col items-center justify-center">
+        <a
+          href="../pages/catalogMobile.html"
+          class="flex flex-col items-center justify-center"
+        >
           <img
             src="../img/icons/mobilemenuicons/catalog.svg"
             alt="Compare"
@@ -145,7 +148,10 @@
           />
           <p class="text-[13px] leading-none pt-[10px]">Избранное</p>
         </a>
-        <a href="#" class="flex flex-col items-center justify-center">
+        <a
+          href="tel:+84951504072"
+          class="flex flex-col items-center justify-center"
+        >
           <img
             src="../img/icons/mobilemenuicons/mobilephone.svg"
             alt="Compare"
